fix z-index of navbar

--- a/GifGenerator/ClientApp/src/components/Navbar.css
+++ b/GifGenerator/ClientApp/src/components/Navbar.css
@@ -7,7 +7,7 @@
     padding-bottom: 10px;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 5;
 }
 
 .nav-path {
